sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:11: error: type mismatch;
 found   : String
 required: Int
		copie(i,temp)
                        ^AlgSelectionSort:13: error: type mismatch;
 found   : String
 required: Int
		setValeur(temp,minpos)
                          ^